comment out h1 tag

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </tr>
     </table>
     <hr>
-    <h1>HELLO</h1>
+    <!-- <h1>HELLO</h1> -->
       </p>
       <h3>Favourite Movies</h3>
       <ul><li>Fast and Furious.</li> 
