--- a/contact-me.html
+++ b/contact-me.html
@@ -11,5 +11,7 @@
     <p>evergreendave1@gmail.com</p>
     <p>2348061643077</p>
     <p>Lagos-Nigeria</p>
+    <hr />
+    <h3><a href="forms.html">Forms</a></h3>
   </body>
 </html>
